--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/map_style.json
+    - assets/images/user_profile.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -68,11 +69,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Ubuntu Mono
+      fonts:
+        - asset: assets/fonts/UbuntuMono-Bold.ttf
+        - asset: assets/fonts/UbuntuMono-BoldItalic.ttf
+        - asset: assets/fonts/UbuntuMono-Italic.ttf
+        - asset: assets/fonts/UbuntuMono-Regular.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
