--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^4.3.2+2
   mapbox_gl: ^0.9.0
   dio: ^3.0.10
+  rxdart: ^0.26.0 
 dev_dependencies:
   flutter_test:
     sdk: flutter
