--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   mapbox_gl: ^0.9.0
   dio: ^3.0.10
   rxdart: ^0.26.0
-  bloc_pattern: ^2.5.1 
+  bloc_pattern: ^2.5.1
+  equatable: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
